Add executions tag

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,14 @@
                 <configuration>
                     <minimizeJar>false</minimizeJar>
                 </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
