not related, but HAProxy support would be really really cool

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,5 @@
 name: SimplePacketListenerAPI
 main: xyz.acrylicstyle.packetListener.SimplePacketListenerPlugin
 version: 1.0.0
+loadbefore:
+  - ViaVersion
