--- a/pom.xml
+++ b/pom.xml
@@ -57,5 +57,11 @@
             <artifactId>annotations</artifactId>
             <version>18.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec-haproxy</artifactId>
+            <version>4.1.52.Final</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
